refined anova test label with combinations() function

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # Dataset
 ReCANVo/
 
+# pickles
+*.pkl
+
+# random 
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
