added model weights to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Dataset
 ReCANVo/
 
+# models
+*pth
+
 # pickles
 *.pkl
 
@@ -8,7 +11,7 @@ ReCANVo/
 *.parquet
 
 # random 
-.DS_Store
+# .DS_Store
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
